:rocket: Update nav to prevent spacing issues

--- a/dev/scss/sections/_header.scss
+++ b/dev/scss/sections/_header.scss
@@ -332,7 +332,7 @@
     }
   }
 
-  @media screen and (max-width: 1000px) {
+  @media screen and (max-width: 1143px) {
     padding: 0 var(--sectionHorizontalSpacing);
 
     &__logo {
